Fixed header and description alignments on various devices

--- a/app/pages/resource/_resource-page.scss
+++ b/app/pages/resource/_resource-page.scss
@@ -25,7 +25,15 @@ $content-padding: 10px;
     background-color: $white;
     box-sizing: content-box;
     margin-bottom: 30px;
+    @media only screen and (min-width: 767px) {
+    margin-left: -25px;
+    }
   }
+
+  p {
+    margin-left: 15px;
+  }
+
   .date-header {
     margin-bottom: 20px;
     font-size: 1.8rem;
@@ -144,7 +152,11 @@ $content-padding: 10px;
     /* Fix for resource page */
       /* Padding for turquise area */
       .app-ResourceHeader__content {
-         padding: 15px 15px 15px 15px;
+        padding: 15px 15px 15px 15px;
+        @media only screen and (min-width: 767px) {
+         padding: 15px 0 15px 0;
+         margin-left: -15px;
+        }
       }
       /*smaller header*/
       .h1, h1 {
