--- a/app/pages/resource/resource-info/_resource-info.scss
+++ b/app/pages/resource/resource-info/_resource-info.scss
@@ -65,6 +65,7 @@ $horizontal-margin: 20px;
   &__web {
     span {
       display: block;
+      margin-left: -30px;
     }
   }
 
