--- a/app/shared/resource-calendar/_resource-calendar.scss
+++ b/app/shared/resource-calendar/_resource-calendar.scss
@@ -35,6 +35,9 @@
     max-width: 550px;
     flex-grow: 1;
     position: relative;
+    @media only screen and (min-width: 1080px) {
+      margin-left: 15px;
+    }
 
     .form-group {
       margin-bottom: 0;
